# gamocosm-wrapper

./: .gitignore  README.md  gamocosm.py  pyproject.toml  requirements.txt  shutdown.py
src/gamocosm/: __main__.py  core.py
tools/: shutdown.py
